--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react-dom": "^18.0.9",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
@@ -23,8 +24,3 @@
     "react-scripts": "latest"
   }
 }
-"homepage": "https://marcio24.github.io/C-piaStarbucks",
-"scripts": {
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
-},
