--- a/package.json
+++ b/package.json
@@ -24,3 +24,8 @@
     "react-scripts": "latest"
   }
 }
+"homepage": "https://github-username.github.io/nome-do-repositorio",
+"scripts": {
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
+},
